# doom-emacs-config-backup

./: .gitignore  MANIFEST.md  README.md  UPDATED.md  install.sh  restore.sh  zshrc-backup
doom-config/: config.el  init.el  packages.el
templates/cpp-cmake-project/: CMakeLists.txt  DEBUGGING_GUIDE.md  create_project.sh
